--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
         function handleInstagram() {
             // Instagram hesabınızı buraya yazın - @egzoztayfa yerine kendi hesabınızı yazın
-            const instagramUrl = 'https://instagram.com/mertcn_0001';
+            const instagramUrl = 'https://instagram.com/egzozfree';
             
             alert('Instagram sayfamızı ziyaret ediyorsunuz! 📸');
             window.open(instagramUrl, '_blank', 'noopener,noreferrer');
